fix: scrollbars fix

--- a/src/_sections/formatsSection/styles.module.sass
+++ b/src/_sections/formatsSection/styles.module.sass
@@ -52,6 +52,8 @@
   gap:  12px
   padding-bottom: 6px
   overflow-x: scroll
+  &::-webkit-scrollbar
+    display: none
 
 .tabComponent
   display: flex
