--- a/src/_sections/sponsorsSection/styles.module.sass
+++ b/src/_sections/sponsorsSection/styles.module.sass
@@ -25,3 +25,5 @@
     overflow-x: auto
     gap: 20px
     padding: 0 20px
+    &::-webkit-scrollbar
+      display: none
