--- a/src/_sections/teamSection/styles.module.sass
+++ b/src/_sections/teamSection/styles.module.sass
@@ -33,3 +33,5 @@
     width: 100vw
     justify-content: flex-start
     padding: 0 20px
+    &::-webkit-scrollbar
+      display: none
